--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://pavel-troinich.github.io/todo-test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2",
+    "gh-pages": "^5.0.0",
     "prettier": "3.0.0"
   }
 }
